--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iamsauravsharma/renovate-config",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "Renovate config for iamsauravsharma github profile",
     "keywords": [
         "renovate",
@@ -40,7 +40,7 @@
                 ":label(dependencies)",
                 "group:allNonMajor",
                 "group:monorepos",
-                "group:recommended",
+                "group:recommended"
             ]
         }
     }
