--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,15 @@
 language: node_js
+
+node_js: node
+
+dist: bionic
+
+install:
+ - npm install -g renovate
+
+script:
+ - renovate-config-validator
+
 deploy:
   provider: npm
   email: $NPM_EMAIL
@@ -7,4 +18,3 @@ deploy:
   on:
     tags: true
     branch: master
-
