--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@iamsauravsharma/renovate-config",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "Renovate config for iamsauravsharma github profile",
     "keywords": [
         "renovate",
@@ -28,6 +28,7 @@
                 ":separateMajorReleases",
                 ":combinePatchMinorReleases",
                 ":renovatePrefix",
+                ":semanticCommits",
                 ":semanticPrefixFixDepsChoreOthers",
                 ":rebaseStalePrs",
                 ":prImmediately",
