fix: use chore as prefix
Signed-off-by: Saurav Sharma <appdroiddeveloper@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
                 ":combinePatchMinorReleases",
                 ":renovatePrefix",
                 ":semanticCommits",
-                ":semanticPrefixFixDepsChoreOthers",
+                ":semanticPrefixChore",
                 ":rebaseStalePrs",
                 ":prImmediately",
                 ":disableRateLimiting",
